--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <h1>Jack Hyatt's CSCE 190 Site</hl>
 
         <section class="assignment">
-            <a href="files/Problem-Statement.pdf"><img src = "images/Problem-Statement.png"></a>
+            <a href="Files/Problem-Statement.pdf"><img src = "Images/Problem-Statement.png"></a>
             <section class = "ass-details">
-                <a href="files/Problem-Statement.pdf"><h2>Problem Statement: Personal Alcohol Identifier</h2></a>
+                <a href="Files/Problem-Statement.pdf"><h2>Problem Statement: Personal Alcohol Identifier</h2></a>
                 <p>
                     Our users are struggling with finding drinks to suit their tastes while developing healthy drinking habits. Most people may spend a significant amount of time trying different alcoholic beverages before they find a drink that attains both their ideal flavor and alcohol by volume. We seek to ease this process by matching one’s tastes with numerous options to choose from, while also making sure they are aware of how the drinks will affect them in both small and large numbers.
                 </p>
-                <a href="files/Problem-Statement.pdf">Problem Statement pdf</a>
+                <a href="Files/Problem-Statement.pdf">Problem Statement pdf</a>
             </section>
         </section>
     </body>
