--- a/index.html
+++ b/index.html
@@ -5,15 +5,26 @@
     </head>
     <body>
         <h1>Jack Hyatt's CSCE 190 Site</hl>
-
-        <section class="assignment">
-            <a href="Files/Problem-Statement.pdf"><img src = "Images/Problem-Statement.png"></a>
-            <section class = "ass-details">
-                <a href="Files/Problem-Statement.pdf"><h2>Problem Statement: Personal Alcohol Identifier</h2></a>
-                <p>
-                    Our users are struggling with finding drinks to suit their tastes while developing healthy drinking habits. Most people may spend a significant amount of time trying different alcoholic beverages before they find a drink that attains both their ideal flavor and alcohol by volume. We seek to ease this process by matching one’s tastes with numerous options to choose from, while also making sure they are aware of how the drinks will affect them in both small and large numbers.
-                </p>
+            
+            <!-- Problem Statement Section -->
+            <section class="assignment">
+                <a href="Files/Problem-Statement.pdf"><img src = "Images/Problem-Statement.png"></a>
+                <section class = "ass-details">
+                    <a href="Files/Problem-Statement.pdf"><h2>Problem Statement: Personal Alcohol Identifier</h2></a>
+                    <p>
+                        Our users are struggling with finding drinks to suit their tastes while developing healthy drinking habits. Most people may spend a significant amount of time trying different alcoholic beverages before they find a drink that attains both their ideal flavor and alcohol by volume. We seek to ease this process by matching one’s tastes with numerous options to choose from, while also making sure they are aware of how the drinks will affect them in both small and large numbers.
+                    </p>
+                </section>
             </section>
-        </section>
+            <!-- Affinity Diagram Section -->
+            <section class="assignment">
+                <a href="Files/Affinity-diagram.pdf"><img src = "Images/Affinity-diagram-silde1.png"><img src = "Images/Affinity-diagram-slide2.png"></a>
+                <section class = "ass-details">
+                    <a href="Files/Problem-Statement.pdf"><h2>Affinity-diagram: Personal Alcohol Identifier</h2></a>
+                    <p>
+                        This is the topics and ideas anything related towards our problem statement, this was done with my whole group.
+                    </p>
+                </section>
+            </section>
     </body>
 </html>
