--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>CSCE 190: Jack Hyatt</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Jack Hyatt's CSCE 190 Site</hl>
+        <h1>Jack Hyatt's CSCE 190 Site</h1>
             
             <!-- Problem Statement Section -->
             <section class="assignment">
@@ -23,6 +24,17 @@
                     <a href="Files/Problem-Statement.pdf"><h2>Affinity-diagram: Personal Alcohol Identifier</h2></a>
                     <p>
                         This is the topics and ideas anything related towards our problem statement, this was done with my whole group.
+                    </p>
+                </section>
+            </section>
+
+            <!-- Personna section -->
+            <section class="assignment">
+                <a href="Files/Personnas.pdf"><img src = "Images/Personna.png">
+                <section class = "ass-details">
+                    <a href="Files/Personnas.pdf"><h2>Personna: 5 Personnas for Perosnal Alcohol Identifier</h2></a>
+                    <p>
+                        Personnas of typical people who would use a perosnal alcohol identifier app.
                     </p>
                 </section>
             </section>
