--- a/index.html
+++ b/index.html
@@ -38,5 +38,16 @@
                     </p>
                 </section>
             </section>
+
+            <!-- Storyboard section -->
+            <section class="assignment">
+                <a href="Files/Persona Storyboard.pdf"><img src = "Images/Storyboard.png">
+                <section class = "ass-details">
+                    <a href="Files/Persona Storyboard.pdf"><h2>Personna Storyboards: 5 Storyboards for Alcohol Identifier</h2></a>
+                    <p>
+                        Personna Storyboards of typical people who would get into the app.
+                    </p>
+                </section>
+            </section>
     </body>
 </html>
