--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </section>
             <!-- Affinity Diagram Section -->
             <section class="assignment">
-                <a href="Files/Affinity-diagram.pdf"><img src = "Images/Affinity-diagram-silde1.png"><img src = "Images/Affinity-diagram-slide2.png"></a>
+                <a href="Files/Affinity-diagram.pdf"><img src = "Images/Affinity-diagram-silde1.png"></a>
                 <section class = "ass-details">
                     <a href="Files/Problem-Statement.pdf"><h2>Affinity-diagram: Personal Alcohol Identifier</h2></a>
                     <p>
@@ -46,6 +46,17 @@
                     <a href="Files/Persona Storyboard.pdf"><h2>Personna Storyboards: 5 Storyboards for Alcohol Identifier</h2></a>
                     <p>
                         Personna Storyboards of typical people who would get into the app.
+                    </p>
+                </section>
+            </section>
+
+            <!-- Sketches section -->
+            <section class="assignment">
+                <a href="Files/AlcoholIdentifer-Sketch.pdf"><img src = "Images/Sketches.png">
+                <section class = "ass-details">
+                    <a href="Files/AlcoholIdentifer-Sketch.pdf"><h2>Sketches: 5 Sketches for Alcohol Identifier</h2></a>
+                    <p>
+                        Sketches of what the app will look like.
                     </p>
                 </section>
             </section>
