--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
                     </section>
                     <a href="https://youtu.be/jFF3uvmN8II"><img src = "Images/Prototype-Sketch.png">
                 </section>
+
+                <!-- lofi section -->
+                <section class="assignment">
+                    <section class = "ass-details">
+                        <a href="Files/Lofi/src/index.html"><h2>LoFi Prototype for the app</h2></a>
+                        <p>
+                            Interactive "app" of how the app will work. It very much a rough sketch.
+                            Click the picture for the preview (looks better in my opinion) or click the title for the app through proto.io
+                        </p>
+                    </section>
+                    <a href="Files/Lofi/preview.html"><img src = "Images/LoFi Prototype.png">
+                </section>
             </div>
     </body>
 </html>
